<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Dont\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password, and email address.</string>
    <string name="sign_up_error_tile">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Freinds</string>
    <string name="error_title">We\'re Sorry</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem you device\'s external.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB.</string>
    <string name="error_opening_file">There was a problem with the file.</string>
    <string name="error_file_size_is_too_large">The selected file is too large, select a new file.</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="menu_send_label">Send</string>


    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Recipients</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry.</string>
    <string name="success_message">Message sent</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_background_image">Ribbit Background Image</string>
    <string name="sub_title_text">A Tree House Project</string>
    <string name="cancel_button_label">CANCEL</string>

    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>

</resources>
