<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shariq.ribbit.ui.LoginActivity"
    style="@style/AuthBackground">


    <ImageView
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background_image"
        android:id="@+id/backgroundImage"/>

    <TextView style="@style/AuthTitle"
        android:id="@+id/title"/>

    <TextView style="@style/AuthTitle.AuthSubTitle"
        android:id="@+id/subtitle"/>


    <LinearLayout
    style="@style/AuthFieldContainer"
    android:id="@+id/editTextLayout">


    <EditText style="@style/AuthEditText"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint">

    <requestFocus/>

</EditText>

    <EditText
        style="@style/AuthEditText"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

</LinearLayout>

    <Button
        style="@style/AuthButton"
        android:id="@+id/loginButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:text="@string/login_button_label"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/signUpText"
        android:layout_below="@id/loginButton"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>