<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.example.shariq.ribbit.SignUpActivity">
    <ImageView style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_des_background_image"
        android:id="@+id/backgroundImage"/>

    <TextView style="@style/AuthTitle"
        android:id="@+id/title"/>

    <TextView style="@style/AuthTitle.AuthSubTitle"
        android:id="@+id/subtitle"/>


    <LinearLayout style="@style/AuthFieldContainer"
    android:id="@+id/editTextLayout">


    <EditText android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/usernameField"
    android:hint="@string/username_hint"
    android:ems="10">

    <requestFocus/>

</EditText>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"
        android:ems="10"
        android:inputType="textEmailAddress"/>

</LinearLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button_label"
        android:layout_below="@+id/editTextLayout"/>
</RelativeLayout>
